libs/extractor/tests/snapshots/all_tests__apply_typography.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Text} from '@devup-ui/core'\n        <Text typography=\"bold\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Typography(
            "bold",
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<span className=\"typo-bold\" />;\n",
}
